added add button.

--- a/src/main/resources/scenes/main.fxml
+++ b/src/main/resources/scenes/main.fxml
@@ -43,6 +43,7 @@
         <items>
             <Button mnemonicParsing="false" onAction="#btnReloadClick" text="Reload" />
             <Button mnemonicParsing="false" onAction="#btnSaveClick" text="Save" />
+            <Button mnemonicParsing="false" onAction="#btnAddClick" text="New item" />
         </items>
       </ToolBar>
     </children>
