--- a/src/main/resources/scenes/main.fxml
+++ b/src/main/resources/scenes/main.fxml
@@ -1,59 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktop.controller.MainController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="desktop.controller.MainController">
     <children>
         <MenuBar fx:id="menuBar">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#onMenuImportGpxClick" text="Import gpx file ..." />
-                        <MenuItem mnemonicParsing="false" onAction="#onMenuCloseClick" text="Close" />
+                        <MenuItem mnemonicParsing="false" onAction="#onMenuImportGpxClick" text="Import gpx file ..."/>
+                        <MenuItem mnemonicParsing="false" onAction="#onMenuCloseClick" text="Close"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" text="About"/>
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
         <TableView fx:id="tableView" editable="true" prefHeight="500.0" prefWidth="500.0">
             <columns>
-                <TableColumn fx:id="tableColumnId" editable="false" minWidth="100.0" prefWidth="-1.0" text="id" />
-                <TableColumn fx:id="tableColumnName" minWidth="100.0" prefWidth="-1.0" text="name" />
-            <TableColumn prefWidth="75.0" text="position">
-               <columns>
-                      <TableColumn fx:id="tableColumnLat" minWidth="100.0" prefWidth="-1.0" text="lat" />
-                      <TableColumn fx:id="tableColumnLon" minWidth="100.0" prefWidth="-1.0" text="lon" />
-                      <TableColumn fx:id="tableColumnAltitude" minWidth="100.0" prefWidth="-1.0" text="altitude" />
-                      <TableColumn fx:id="tableColumnPrecision" minWidth="100.0" prefWidth="-1.0" text="precision" />
-               </columns>
-            </TableColumn>
-                <TableColumn fx:id="tableColumnDescription" minWidth="100.0" prefWidth="-1.0" text="description" />
-                <TableColumn fx:id="tableColumnPointtype" minWidth="100.0" prefWidth="-1.0" text="pointtypeid" />
-                <TableColumn fx:id="tableColumnTrustlevel" minWidth="100.0" prefWidth="-1.0" text="trustlevelid" />
-                <TableColumn fx:id="tableColumnDataid" minWidth="100.0" prefWidth="-1.0" text="dataid" />
+                <TableColumn fx:id="tableColumnId" editable="false" minWidth="100.0" prefWidth="-1.0" text="id"/>
+                <TableColumn fx:id="tableColumnName" minWidth="100.0" prefWidth="-1.0" text="name"/>
+                <TableColumn prefWidth="75.0" text="position">
+                    <columns>
+                        <TableColumn fx:id="tableColumnLat" minWidth="100.0" prefWidth="-1.0" text="lat"/>
+                        <TableColumn fx:id="tableColumnLon" minWidth="100.0" prefWidth="-1.0" text="lon"/>
+                        <TableColumn fx:id="tableColumnAltitude" minWidth="100.0" prefWidth="-1.0" text="altitude"/>
+                        <TableColumn fx:id="tableColumnPrecision" minWidth="100.0" prefWidth="-1.0" text="precision"/>
+                    </columns>
+                </TableColumn>
+                <TableColumn fx:id="tableColumnDescription" minWidth="100.0" prefWidth="-1.0" text="description"/>
+                <TableColumn fx:id="tableColumnPointtype" minWidth="100.0" prefWidth="-1.0" text="pointtypeid"/>
+                <TableColumn fx:id="tableColumnTrustlevel" minWidth="100.0" prefWidth="-1.0" text="trustlevelid"/>
+                <TableColumn fx:id="tableColumnDataid" minWidth="100.0" prefWidth="-1.0" text="dataid"/>
             </columns>
         </TableView>
-      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
-        <items>
-            <Button mnemonicParsing="false" onAction="#btnReloadClick" text="Reload" />
-            <Button mnemonicParsing="false" onAction="#btnDeleteClick" text="Delete selected" />
-            <Button mnemonicParsing="false" onAction="#btnSaveClick" text="Save" />
-            <Button mnemonicParsing="false" onAction="#btnAddClick" text="New item" />
-        </items>
-      </ToolBar>
+        <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
+            <items>
+                <Button mnemonicParsing="false" onAction="#btnReloadClick" text="Reload"/>
+                <Button mnemonicParsing="false" onAction="#btnDeleteClick" text="Delete selected"/>
+                <Button mnemonicParsing="false" onAction="#btnSaveClick" text="Save"/>
+                <Button mnemonicParsing="false" onAction="#btnAddClick" text="New item"/>
+            </items>
+        </ToolBar>
     </children>
 </VBox>
