point table moved to separate component.

--- a/src/main/resources/scenes/main.fxml
+++ b/src/main/resources/scenes/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
+<?import desktop.controller.PointTable?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="desktop.controller.MainController">
@@ -21,24 +22,7 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <TableView fx:id="tableView" editable="true" prefHeight="500.0" prefWidth="500.0">
-            <columns>
-                <TableColumn fx:id="tableColumnId" editable="false" minWidth="100.0" prefWidth="-1.0" text="id"/>
-                <TableColumn fx:id="tableColumnName" minWidth="100.0" prefWidth="-1.0" text="name"/>
-                <TableColumn prefWidth="75.0" text="position">
-                    <columns>
-                        <TableColumn fx:id="tableColumnLat" minWidth="100.0" prefWidth="-1.0" text="lat"/>
-                        <TableColumn fx:id="tableColumnLon" minWidth="100.0" prefWidth="-1.0" text="lon"/>
-                        <TableColumn fx:id="tableColumnAltitude" minWidth="100.0" prefWidth="-1.0" text="altitude"/>
-                        <TableColumn fx:id="tableColumnPrecision" minWidth="100.0" prefWidth="-1.0" text="precision"/>
-                    </columns>
-                </TableColumn>
-                <TableColumn fx:id="tableColumnDescription" minWidth="100.0" prefWidth="-1.0" text="description"/>
-                <TableColumn fx:id="tableColumnPointtype" minWidth="100.0" prefWidth="-1.0" text="pointtypeid"/>
-                <TableColumn fx:id="tableColumnTrustlevel" minWidth="100.0" prefWidth="-1.0" text="trustlevelid"/>
-                <TableColumn fx:id="tableColumnDataid" minWidth="100.0" prefWidth="-1.0" text="dataid"/>
-            </columns>
-        </TableView>
+        <PointTable fx:id="tableView"/>
         <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
             <items>
                 <Button mnemonicParsing="false" onAction="#btnReloadClick" text="Reload"/>
