--- a/src/main/resources/scenes/import.fxml
+++ b/src/main/resources/scenes/import.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import desktop.controller.PointTable?>
+
 <AnchorPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="desktop.controller.ImportController">
   <children>
@@ -11,25 +13,7 @@
       <items>
         <AnchorPane>
           <children>
-            <TableView fx:id="tableGpx" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" editable="true">
-              <columns>
-                <TableColumn fx:id="tableGpxColumnId" editable="false" minWidth="100.0" prefWidth="-1.0" text="id"/>
-                <TableColumn fx:id="tableGpxColumnName" minWidth="100.0" prefWidth="-1.0" text="name"/>
-                <TableColumn prefWidth="75.0" text="position">
-                  <columns>
-                    <TableColumn fx:id="tableGpxColumnLat" minWidth="100.0" prefWidth="-1.0" text="lat"/>
-                    <TableColumn fx:id="tableGpxColumnLon" minWidth="100.0" prefWidth="-1.0" text="lon"/>
-                    <TableColumn fx:id="tableGpxColumnAltitude" minWidth="100.0" prefWidth="-1.0" text="altitude"/>
-                    <TableColumn fx:id="tableGpxColumnPrecision" minWidth="100.0" prefWidth="-1.0" text="precision"/>
-                  </columns>
-                </TableColumn>
-                <TableColumn fx:id="tableGpxColumnDescription" minWidth="100.0" prefWidth="-1.0" text="description"/>
-                <TableColumn fx:id="tableGpxColumnPointtype" minWidth="100.0" prefWidth="-1.0" text="pointtypeid"/>
-                <TableColumn fx:id="tableGpxColumnTrustlevel" minWidth="100.0" prefWidth="-1.0" text="trustlevelid"/>
-                <TableColumn fx:id="tableGpxColumnDataid" minWidth="100.0" prefWidth="-1.0" text="dataid"/>
-              </columns>
-            </TableView>
+            <PointTable fx:id="tblGpx" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
           </children>
         </AnchorPane>
         <AnchorPane>
