--- a/src/main/resources/fxml/scenes/main.fxml
+++ b/src/main/resources/fxml/scenes/main.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-<?import desktop.controller.PointTable?>
+<?import desktop.controller.controls.PointTable?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="desktop.controller.MainController">
