--- a/src/main/resources/fxml/scenes/import.fxml
+++ b/src/main/resources/fxml/scenes/import.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import desktop.controller.controls.PointTable?>
-
 <?import desktop.controller.controls.PointDistantiatedTable?>
+<?import desktop.controller.controls.PointTable?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.*?>
+
 <AnchorPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="desktop.controller.ImportController">
   <children>
@@ -25,15 +26,10 @@
         </AnchorPane>
       </items>
     </SplitPane>
-    <HBox maxHeight="35.0" minHeight="35.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0" spacing="10.0"
-          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-      <children>
+    <ToolBar maxHeight="35.0" minHeight="35.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0"
+          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <Button mnemonicParsing="false" onAction="#btnCloseClick" text="Close"/>
         <Button mnemonicParsing="false" onAction="#btnImportClick" text="Import"/>
-      </children>
-      <padding>
-        <Insets top="4.0"/>
-      </padding>
-    </HBox>
+    </ToolBar>
   </children>
 </AnchorPane>
