--- a/src/main/resources/fxml/scenes/import.fxml
+++ b/src/main/resources/fxml/scenes/import.fxml
@@ -2,34 +2,75 @@
 
 <?import desktop.controller.controls.PointDistantiatedTable?>
 <?import desktop.controller.controls.PointTable?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.*?>
-
 <AnchorPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="desktop.controller.ImportController">
   <children>
-    <SplitPane dividerPositions="0.5" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0"
-               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <MenuBar fx:id="menuBar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <menus>
+        <Menu mnemonicParsing="false" text="File">
+          <items>
+            <MenuItem mnemonicParsing="false" onAction="#onMenuImportGpxClick" text="Import gpx file ...">
+              <accelerator>
+                <KeyCodeCombination alt="UP" code="I" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onMenuSaveClick" text="Save to DB">
+              <accelerator>
+                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onMenuCloseClick" text="Close">
+              <accelerator>
+                <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Edit">
+          <items>
+            <MenuItem mnemonicParsing="false" onAction="#onMenuAssociateClick" text="Associate">
+              <accelerator>
+                <KeyCodeCombination alt="DOWN" code="A" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onMenuDeassociateClick" text="Delete Association">
+              <accelerator>
+                <KeyCodeCombination alt="DOWN" code="D" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Help">
+          <items>
+            <MenuItem mnemonicParsing="false" text="About"/>
+          </items>
+        </Menu>
+      </menus>
+    </MenuBar>
+    <SplitPane dividerPositions="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
       <items>
         <AnchorPane>
           <children>
-            <PointTable fx:id="tblGpx" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+            <PointTable fx:id="tableGpx" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
           </children>
         </AnchorPane>
         <AnchorPane>
           <children>
             <PointDistantiatedTable fx:id="tableMatch" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
           </children>
         </AnchorPane>
       </items>
     </SplitPane>
-    <ToolBar maxHeight="35.0" minHeight="35.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0"
-          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-        <Button mnemonicParsing="false" onAction="#btnCloseClick" text="Close"/>
-        <Button mnemonicParsing="false" onAction="#btnImportClick" text="Import"/>
-    </ToolBar>
+    <!--<ToolBar maxHeight="35.0" minHeight="35.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">-->
+    <!--<Button mnemonicParsing="false" onAction="#btnCloseClick" text="Close" />-->
+    <!--<Button mnemonicParsing="false" onAction="#btnSaveClick" text="Save" />-->
+    <!--<Button mnemonicParsing="false" onAction="#btnImportClick" text="Import" />-->
+    <!--</ToolBar>-->
   </children>
 </AnchorPane>
