--- a/src/main/resources/fxml/controls/KadastrTable.fxml
+++ b/src/main/resources/fxml/controls/KadastrTable.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <fx:root type="TableView" xmlns="http://javafx.com/javafx"
-         xmlns:fx="http://javafx.com/fxml" editable="true">
+         xmlns:fx="http://javafx.com/fxml">
         <columns>
             <TableColumn fx:id="tableColumnId" editable="false" minWidth="100.0" prefWidth="-1.0" text="Id"/>
             <TableColumn fx:id="tableColumnNum" editable="false" minWidth="100.0" prefWidth="-1.0" text="Num"/>
