Added integration with kadastr.

--- a/src/main/resources/fxml/scenes/kadastr.fxml
+++ b/src/main/resources/fxml/scenes/kadastr.fxml
@@ -17,6 +17,11 @@
                                 <KeyCodeCombination alt="UP" code="I" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
                             </accelerator>
                         </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#onMenuUnassociateClick" text="UnAssociate">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="U" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#onMenuCloseClick" text="Close">
                             <accelerator>
                                 <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
