Fixed save and added split orientation on import.

--- a/src/main/resources/fxml/scenes/import.fxml
+++ b/src/main/resources/fxml/scenes/import.fxml
@@ -48,6 +48,15 @@
             </MenuItem>
           </items>
         </Menu>
+        <Menu mnemonicParsing="false" text="View">
+          <items>
+            <MenuItem mnemonicParsing="false" onAction="#onSplitSwitch" text="Switch view">
+              <accelerator>
+                <KeyCodeCombination alt="DOWN" code="S" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+              </accelerator>
+            </MenuItem>
+          </items>
+        </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
             <MenuItem mnemonicParsing="false" text="About"/>
@@ -55,8 +64,8 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
+    <SplitPane fx:id="splitMain" dividerPositions="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" orientation="VERTICAL">
       <items>
         <AnchorPane>
           <children>
